// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brands component renders correctly 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root Grid-item-1 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard-root-3 OverviewCard-clickable-6"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <img
          alt="contentful image alt text"
          class="OverviewCard-headerPicture-9 Media-root-18"
          src="http://localhost:9000/image-filname.jpg"
          style="object-fit: cover; object-position: center;"
        />
        <div
          class="OverviewCard-body-10"
        >
          <h4
            class="MuiTypography-root OverviewCard-title-11 OverviewCard-noBrandLogo-12 Typography-root-20 MuiTypography-h4"
            data-testid="typography"
          >
            contentful document title
          </h4>
          <div
            class="OverviewCard-children-14 OverviewCard-text-13"
          />
          <div
            class="OverviewCard-footer-16"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-28 MuiButton-contained Button-contained-30 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-31"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root Grid-item-1 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard-root-3 OverviewCard-clickable-6"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="OverviewCard-body-10"
        >
          <h4
            class="MuiTypography-root OverviewCard-title-11 OverviewCard-noBrandLogo-12 Typography-root-20 MuiTypography-h4"
            data-testid="typography"
          >
            contentful document title
          </h4>
          <div
            class="OverviewCard-children-14 OverviewCard-text-13"
          />
          <div
            class="OverviewCard-footer-16"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-28 MuiButton-contained Button-contained-30 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-31"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Brands component renders correctly for mobile 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root Grid-item-48 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard-root-50 OverviewCard-clickable-53"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <img
          alt="contentful image alt text"
          class="OverviewCard-headerPicture-56 Media-root-65"
          src="http://localhost:9000/image-filname.jpg"
          style="object-fit: cover; object-position: center;"
        />
        <div
          class="OverviewCard-body-57"
        >
          <h4
            class="MuiTypography-root OverviewCard-title-58 OverviewCard-noBrandLogo-59 Typography-root-67 MuiTypography-h4"
            data-testid="typography"
          >
            contentful document title
          </h4>
          <div
            class="OverviewCard-children-61 OverviewCard-text-60"
          />
          <div
            class="OverviewCard-footer-63"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-75 MuiButton-contained Button-contained-77 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-78"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root Grid-item-48 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard-root-50 OverviewCard-clickable-53"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="OverviewCard-body-57"
        >
          <h4
            class="MuiTypography-root OverviewCard-title-58 OverviewCard-noBrandLogo-59 Typography-root-67 MuiTypography-h4"
            data-testid="typography"
          >
            contentful document title
          </h4>
          <div
            class="OverviewCard-children-61 OverviewCard-text-60"
          />
          <div
            class="OverviewCard-footer-63"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-75 MuiButton-contained Button-contained-77 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-78"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;
